more spacing fixes for mobile view, specifically around the selection view

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ input::placeholder {
     #page-title { font-size: 200%;}
     #tagline { font-size: 100%; padding-top: 20px;}
     #landing-view h3 { font-size: 100%; }
-    #selection-view h2 { font-size: 100%; }
+    #selection-view h2 { font-size: 150%; margin-top: 20px;}
     #artist-view h2 { font-size: 100%; }
     #feedback p { font-size: 100%; }
     #artist-photo { max-height: 50%; max-width: 50%;}
